--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/SrraRequests
+spring.datasource.url=jdbc:postgresql://localhost:5432/archive
 spring.datasource.username=archivist
 spring.datasource.password=archivist
 spring.datasource.driver-class-name=org.postgresql.Driver
