Unload rubrics from db, cleanup code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/archive
+spring.datasource.url=jdbc:postgresql://server:5433/archive
+#spring.datasource.url=jdbc:postgresql://localhost:5433/archive
+#spring.datasource.url=jdbc:postgresql://localhost:5432/archive
 spring.datasource.username=archivist
-spring.datasource.password=archivist
+spring.datasource.password=arch
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.default_schema=requests
+#spring.jpa.properties.hibernate.default_schema=full_requests
