--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-spring.datasource.url=jdbc:postgresql://server:5433/archive
-#spring.datasource.url=jdbc:postgresql://localhost:5433/archive
-#spring.datasource.url=jdbc:postgresql://localhost:5432/archive
+spring.datasource.jdbc-url=jdbc:postgresql://server:5433/archive
 spring.datasource.username=archivist
 spring.datasource.password=arch
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.show-sql=true
+
+spring.second-datasource.jdbc-url=jdbc:postgresql://192.168.0.194:5432/archive
+spring.second-datasource.username=postgres
+spring.second-datasource.password=password
+
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.default_schema=requests
-#spring.jpa.properties.hibernate.default_schema=full_requests
